# new_words

./: README.md  my_known_words.txt  new_words.py  pyproject.toml
