[project]
name = ""
version = ""
description = ""
authors = [
    {name = "tong.bu", email = "stepsame@gmail.com"},
]
dependencies = [
    "PyMuPDF>=1.21.0",
    "word-forms>=2.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
